showing inputs in output 2

--- a/app/styles/_licensing.scss
+++ b/app/styles/_licensing.scss
@@ -33,7 +33,7 @@
       background-color: #fafafa;
       padding: 20px;
       border-radius: 4px;
-      .inputs-display: {
+      .input-display: {
         margin-bottom: 10px;
         border-bottom: 1px solid #aaa;  
       }
