--- a/app/styles/_licensing.scss
+++ b/app/styles/_licensing.scss
@@ -11,6 +11,9 @@
     font-size: 14px;
     font-weight: bold;
   }
+  .error-message {
+    color: red;
+  }
   .licensing-step {
     .licensing-step-body {
       display: -webkit-box;
