--- a/app/templates/components/teacher-requirements.hbs
+++ b/app/templates/components/teacher-requirements.hbs
@@ -57,7 +57,7 @@
           <div class="outputs-display">
 
             {{#if requiredTeachers.tooManyStudentsError }}
-              <div class="tooManyStudentsError">
+              <div class="display-entry error-message">
                 Exceeds maximum group size of {{ requiredTeachers.ageRange.maxGroupSize }}
               </div>
             {{/if}}
