--- a/app/templates/components/teacher-requirements.hbs
+++ b/app/templates/components/teacher-requirements.hbs
@@ -102,6 +102,15 @@
                 </div>
               {{/if}}
 
+              <div class="number-of-teachers-required display-entry">
+                <div class="display-property">
+                  Min Square Ft:
+                </div>
+                <div class="display-value">
+                  {{ requiredTeachers.squareFootage }} square feet 
+                </div>
+              </div>
+
             {{/unless}}
           </div>
         </div>
