--- a/app/templates/components/teacher-requirements.hbs
+++ b/app/templates/components/teacher-requirements.hbs
@@ -2,7 +2,7 @@
 <div class="teacher-requirements licensing-step">
 
   <div class="teacher-requirements-header licensing-step-header">
-    <h2>Step 1: Teacher Requirements</h2>
+    <h2>Teacher and Building Requirements by Student Age and Number of Students</h2>
   </div>
 
   <div class="teacher-requirements-body licensing-step-body">
