number of students by sq footage module added

--- a/app/styles/_licensing.scss
+++ b/app/styles/_licensing.scss
@@ -70,8 +70,8 @@
     display: -ms-flexbox;
     display: flex;
     .display-property {
-      width: 40%px;
-      min-width: 140px;
+      width: 40%;
+      min-width: 160px;
       max-width: 240px;
       font-size: 14px;
       font-weight: bold;
