--- a/app/templates/jurisdiction/view.hbs
+++ b/app/templates/jurisdiction/view.hbs
@@ -1,13 +1,17 @@
 
 <div class="header">
-  <h1>
-    {{ model.name }} Licensing
-  </h1>
+  <div>
+    <h1>
+      {{ model.name }} Licensing
+    </h1>
+  </div>
+  <div class="to-jurisdiction-index">
+    <p>
+      {{#link-to 'jurisdiction'}}Choose a different State{{/link-to}}
+    </p>
+  </div>
 </div>
 
-<p>
-    {{#link-to 'jurisdiction'}}Choose a different State{{/link-to}}
-</p>
 
 <div class="scenario-selector">
 
