starting to add quals

--- a/app/templates/components/teacher-requirements.hbs
+++ b/app/templates/components/teacher-requirements.hbs
@@ -84,7 +84,17 @@
 
               <div class="number-of-teachers-required display-entry">
                 <div class="display-property">
-                  Qualifications:
+                  Educator Qualifications:
+                </div>
+                <div class="display-value">
+                  {{ requiredTeachers.ageRange.educatorQualifications }} 
+                </div>
+              </div>
+
+
+              <div class="number-of-teachers-required display-entry">
+                <div class="display-property">
+                  Admin Qualifications:
                 </div>
                 <div class="display-value">
                   {{ requiredTeachers.ageRange.educatorQualifications }} 
