--- a/app/templates/components/teacher-requirements.hbs
+++ b/app/templates/components/teacher-requirements.hbs
@@ -84,17 +84,16 @@
 
               <div class="number-of-teachers-required display-entry">
                 <div class="display-property">
-                  Educator Qualifications:
+                  Minimum Educator Qualifications:
                 </div>
                 <div class="display-value">
                   {{ studentAge.educatorQualifications }} 
                 </div>
               </div>
 
-
               <div class="number-of-teachers-required display-entry">
                 <div class="display-property">
-                  Admin Qualifications:
+                  Minimum Admin Qualifications:
                 </div>
                 <div class="display-value">
                   {{ requiredTeachers.administrator.administratorQualifications }} 
