--- a/app/templates/jurisdiction/view.hbs
+++ b/app/templates/jurisdiction/view.hbs
@@ -21,7 +21,7 @@
 
   <div class="scenario-entry">
 
-      Teacher requirements and square footage by student age and number of students
+      Teacher and building requirements and square footage by student age and number of students
 
   </div>
 
