--- a/app/templates/jurisdiction/qualifications.hbs
+++ b/app/templates/jurisdiction/qualifications.hbs
@@ -17,12 +17,20 @@
   <div class="educator-qualification">
 
     <div class="qualification-name">
-      Assistant Teacher
+      <h2>
+        Assistant Teacher
+      </h2>
+    </div>
+
+    <div class="qualifications-regulation-number">
+      <a href="http://www.mass.gov/courts/docs/lawlib/600-699cmr/606cmr7.pdf" target="_">
+        606 CMR 7.09(18)(c)1
+      </a>
     </div>
 
     <div class="qualification-desc">
       <pre>
-        Must be at least 16 years of age or have a high school diploma or equivalent; must work at all times under the direct supervision of at least a teacher qualified staff person.
+Must be at least 16 years of age or have a high school diploma or equivalent; must work at all times under the direct supervision of at least a teacher qualified staff person.
       </pre>
     </div>
 
@@ -31,7 +39,15 @@
   <div class="educator-qualification">
 
     <div class="qualification-name">
-      Teacher
+      <h2>
+        Teacher
+      </h2>
+    </div>
+
+    <div class="qualifications-regulation-number">
+      <a href="http://www.mass.gov/courts/docs/lawlib/600-699cmr/606cmr7.pdf" target="_">
+        606 CMR 7.09(18)(c)2
+      </a>
     </div>
 
     <div class="qualification-desc">
@@ -62,6 +78,127 @@ experience must be in caregiving to infant/toddlers.
     </div>
 
   </div>
+
+  <div class="educator-qualification">
+
+    <div class="qualification-name">
+      <h2>
+        Lead Teacher for Infants and Toddlers
+      </h2>
+    </div>
+
+    <div class="qualifications-regulation-number">
+      <a href="http://www.mass.gov/courts/docs/lawlib/600-699cmr/606cmr7.pdf" target="_">
+        606 CMR 7.09(18)(c)3
+      </a>
+    </div>
+
+    <div class="qualification-desc">
+      <pre>
+Must be at least 21 years of age and meet
+one of the following sets of requirements for education and experience. At least nine
+months of work experience or one practicum must be with infants and toddlers. If all
+work experience is with infants and toddlers, the total work experience required is
+reduced by a.
+a. High School diploma or equivalent; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development and three credits in
+Infant and Toddler Care; and
+ii. 36 months of work experience.
+b. High School diploma or equivalent; Child Development Associate (CDA)
+Credential in Center-based, Home Visitor or Family Child Care setting with
+infant/toddler endorsement and 27 months of work experience.
+c. Associate’s degree in Early Childhood Education or a related field of study; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development and three credits in
+Infant and Toddler Care; and
+ii. 18 months of work experience.
+d. Bachelor’s degree in an unrelated field of study; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development and three credits in
+Infant and Toddler Care; and
+ii. 18 months of work experience.
+e. Bachelor’s or advanced degree in Early Childhood Education or in a related field
+of study; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development and three credits in
+Infant and Toddler Care;
+ii. and nine months of work experience.
+f. Alternative Early Childhood Training Program; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development and three credits in
+Infant and Toddler Care; and
+ii. 27 months of work experience.
+g. Certification as an Early Intervention Specialist by the Department of Public
+Health.
+      </pre>
+    </div>
+
+  </div>
+
+  <div class="educator-qualification">
+
+    <div class="qualification-name">
+      <h2>
+        Lead Teacher for Preschoolers
+      </h2>
+    </div>
+
+    <div class="qualifications-regulation-number">
+      <a href="http://www.mass.gov/courts/docs/lawlib/600-699cmr/606cmr7.pdf" target="_">
+        606 CMR 7.09(18)(c)4
+      </a>
+    </div>
+
+    <div class="qualification-desc">
+      <pre>
+Must be at least 21 years of age and meet one of the
+following sets of requirements for education and experience. At least nine months of
+work experience or one practicum must be with preschoolers. 
+a. High School diploma or equivalent; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development, and two credits in
+Planning Programs, Curriculum or Classroom management; and
+ii. 36 months of work experience.
+b. High School diploma or equivalent; Child Development Associate (CDA)
+Credential in Center-based, Home Visitor, or Family Child Care setting with a
+preschool endorsement; and 27 months of work experience.
+c. Associate’s degree in Early Childhood Education or a related field of study; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development, and two credits in
+Planning Programs, Curriculum or Classroom management; and
+ii. 18 months of work experience.
+d. Bachelor’s degree in an unrelated field of study; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development, and two credits in
+Planning Programs, Curriculum or Classroom management; and
+ii. 18 months of work experience.
+e. Bachelor’s or advanced degree in Early Childhood Education or in a related field
+of study; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development, and two credits in
+Planning Programs, Curriculum or Classroom management; and
+ii. nine months of work experience.
+f. Alternative Early Childhood Training Program; and
+i. 12 credits in at least four categories of study except Child Care Administration
+including three credits in Child Growth and Development, and two credits in
+Planning Programs, Curriculum or Classroom management; and
+ii. 27 months of work experience.
+g. K-3 Teacher of Young Children with Special Needs Certification from the
+Department of Education.
+5. Director I: must meet the requirements of lead teacher; have six months of work
+experience after meeting lead teacher qualifications; have evidence of satisfactory
+completion of at least two credits or three CEUs in category Child Care Administration;
+and have evidence of satisfactory completion of at least two additional credits or three
+CEU’s in any category 606 CMR 7.09(18)(b)1. through 12.
+6. Director II: must meet all the requirements of Director I and have evidence of
+satisfactory completion of at least two additional credits or three CEUs in any category
+606 CMR 7.09(18)(b)6. or 606 CMR 7.09(18)(b)8. through 13.
+      </pre>
+    </div>
+
+  </div>
+
 
 </div>
 
