--- a/app/templates/jurisdiction/qualifications.hbs
+++ b/app/templates/jurisdiction/qualifications.hbs
@@ -2,7 +2,7 @@
 <div class="header">
   <div>
     <h1>
-      {{ model.name }} Licensing
+      {{ model.name }} Licensing<br>Educator Qualifications
     </h1>
   </div>
   <div class="to-jurisdiction-index">
