--- a/app/templates/jurisdiction/view.hbs
+++ b/app/templates/jurisdiction/view.hbs
@@ -15,25 +15,27 @@
 
 <div class="scenario-selector">
 
-  <div class="scenarios-label">
-    Scenarios
-  </div>
-
-  <div class="scenario-entry">
-
-      Teacher and building requirements and square footage by student age and number of students
-
-  </div>
-
   <div class="scenario-entry">
     {{#link-to 'jurisdiction.view' model.id }}
-      Number of students by square footage
+      Teachers
     {{/link-to}}
   </div>
 
   <div class="scenario-entry">
     {{#link-to 'jurisdiction.view' model.id }}
-      Number of students by number of teachers and student age
+      Location
+    {{/link-to}}
+  </div>
+
+  <div class="scenario-entry">
+    {{#link-to 'jurisdiction.view' model.id }}
+      Inspection
+    {{/link-to}}
+  </div>
+
+  <div class="scenario-entry">
+    {{#link-to 'jurisdiction.view' model.id }}
+      Forms
     {{/link-to}}
   </div>
 
